# generator-Video

./: pyproject.toml  sensitive_words.md
.workflow/: manifest.json
docs/tech-analysis/: README.md  digital_human_pipeline.md
pixelle_video/: __init__.py
pixelle_video/services/: frame_html.py  frame_processor.py  llm_service.py  video.py
pixelle_video/services/api_services/: image_client.py  video_client.py
templates/1080x1920/: image_blur_card.html  image_book.html  image_default.html  image_excerpt.html  image_full.html  image_life_insights_light.html  image_long_text.html  image_modern.html  image_neon.html  image_purple.html  image_satirical_cartoon.html  image_simple_black.html  image_simple_line_drawing.html  static_default.html  static_excerpt.html  video_default.html  video_healing.html
templates/1920x1080/: image_book.html  image_film.html  image_full.html
tests/: ai_rewrite_test.py  sidebar_navigation_theme_test.py
web/: app.py
web/components/: ai_rewrite.py  output_preview.py  sensitive_words_detector.py  settings.py  style_config.py  theme.py
web/i18n/locales/: en_US.json  zh_CN.json
web/pages/: 01_quick_create.py  02_digital_human.py  03_image_to_video.py  04_action_transfer.py  05_asset_based.py  06_history.py  07_settings.py  08_sensitive_words.py  09_sensitive_words_detector.py  10_ai_rewrite.py
web/pipelines/: action_transfer.py  asset_based.py  digital_human.py  i2v.py  standard.py
web/utils/: page_bootstrap.py
workflows/runninghub/: video_qwen_wan2.2.json
